--- a/docs.html
+++ b/docs.html
@@ -83,7 +83,7 @@
                                 <li>قطر الهلال: <span class="climate-zone zone-semi-arid">2 - 12 متر</span></li>
                                 <li>ارتفاع السد: <span class="climate-zone zone-humid">30 - 50 سم</span></li>
                                 <li>ميل الأرض: <span class="climate-zone zone-semi-arid">0 - 15%</span></li>
-                                <li>أنواع الأغراض: <span class="climate-zone zone-arid">الرعي، الشجيرات، الأشجار، النباتات العشبية، تحسين التربة</span></li>
+                                <li>أنواع الأغراض: <span class="climate-zone zone-arid">تحسين التربة، النباتات العشبية، الأشجار، الشجيرات، الرعي</span></li>
                             </ul>
                         </div>
 
@@ -116,7 +116,7 @@
                                 <li>شبه رطبة (750-1000 ملم): D = 4 + (الغرض/100) × 4</li>
                                 <li>رطبة (&gt; 1000 ملم): D = 4 + (الغرض/100) × 4</li>
                             </ul>
-                            <p><strong>تأثير الغرض:</strong> +1 متر للرعي، -1 متر لتحسين التربة</p>
+                            <p><strong>تأثير الغرض:</strong> -1 متر لتحسين التربة، +1 متر للرعي</p>
                         </div>
                         
                         <div class="equation-block">
@@ -263,15 +263,15 @@
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>الرعي</td>
-                                            <td>+1 متر</td>
-                                            <td>أحواض أكبر وأكثر تباعداً، مناسبة للمراعي والعلف</td>
+                                            <td>تحسين التربة</td>
+                                            <td>-1 متر</td>
+                                            <td>أحواض أصغر وأكثر كثافة، مناسبة لتحسين خصوبة التربة</td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>الشجيرات</td>
+                                            <td>النباتات العشبية</td>
                                             <td>لا يوجد تأثير</td>
-                                            <td>أحواض متوسطة الحجم، مناسبة للشجيرات متوسطة الحجم</td>
+                                            <td>أحواض متوسطة الحجم، مناسبة للنباتات العشبية والمحاصيل الحقلية</td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
@@ -281,15 +281,15 @@
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td>النباتات العشبية</td>
+                                            <td>الشجيرات</td>
                                             <td>لا يوجد تأثير</td>
-                                            <td>أحواض متوسطة الحجم، مناسبة للنباتات العشبية والمحاصيل الحقلية</td>
+                                            <td>أحواض متوسطة الحجم، مناسبة للشجيرات متوسطة الحجم</td>
                                         </tr>
                                         <tr>
                                             <td>5</td>
-                                            <td>تحسين التربة</td>
-                                            <td>-1 متر</td>
-                                            <td>أحواض أصغر وأكثر كثافة، مناسبة لتحسين خصوبة التربة</td>
+                                            <td>الرعي</td>
+                                            <td>+1 متر</td>
+                                            <td>أحواض أكبر وأكثر تباعداً، مناسبة للمراعي والعلف</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -302,10 +302,10 @@
                             <h3>مبادئ التصميم حسب الغرض</h3>
                             <p>بناءً على المصادر العلمية، يتم تطبيق المبادئ التالية:</p>
                             <ul>
-                                <li><strong>الرعي:</strong> أحواض أكبر ومسافات أوسع لتوفير مساحة كافية للرعي</li>
-                                <li><strong>الشجيرات والأشجار:</strong> أحواض متوسطة الحجم مع تداخل كافٍ لمنع فقدان المياه</li>
-                                <li><strong>النباتات العشبية:</strong> أحواض متوسطة الحجم مناسبة لنظم الجذور السطحية</li>
                                 <li><strong>تحسين التربة:</strong> أحواض أصغر وأكثر كثافة لزيادة كفاءة استخدام المياه</li>
+                                <li><strong>النباتات العشبية:</strong> أحواض متوسطة الحجم مناسبة لنظم الجذور السطحية</li>
+                                <li><strong>الأشجار والشجيرات:</strong> أحواض متوسطة الحجم مع تداخل كافٍ لمنع فقدان المياه</li>
+                                <li><strong>الرعي:</strong> أحواض أكبر ومسافات أوسع لتوفير مساحة كافية للرعي</li>
                             </ul>
                         </div>
                     </section>
@@ -857,7 +857,7 @@
                     type: 'line',
                     data: {
                         labels: purposes.map(p => {
-                            const purposesLabels = ['الرعي', 'الشجيرات', 'الأشجار', 'العشبية', 'تحسين التربة'];
+                            const purposesLabels = ['تحسين التربة', 'النباتات العشبية', 'الأشجار', 'الشجيرات', 'الرعي'];
                             return purposesLabels[purposes.indexOf(p)];
                         }),
                         datasets: datasets
