--- a/calculator.html
+++ b/calculator.html
@@ -81,15 +81,15 @@
                             <div class="slider-container">
                                 <label for="purpose">اختر الغرض من النظام:</label>
                                 <input type="range" id="purpose" class="slider" min="0" max="100" value="50">
-                                <div class="slider-value" id="purpose-value">أشجار</div>
+                                <div class="slider-value" id="purpose-value">الأشجار</div>
                             </div>
                             
                             <div class="option-buttons">
-                                <button type="button" class="option-btn" data-value="0">الرعي</button>
-                                <button type="button" class="option-btn" data-value="25">الشجيرات</button>
-                                <button type="button" class="option-btn active" data-value="50">الأشجار</button>
-                                <button type="button" class="option-btn" data-value="75">النباتات العشبية</button>
-                                <button type="button" class="option-btn" data-value="100">تحسين التربة</button>
+                                <button type="button" class="option-btn active" data-value="0">تحسين التربة</button>
+                                <button type="button" class="option-btn" data-value="25">النباتات العشبية</button>
+                                <button type="button" class="option-btn" data-value="50">الأشجار</button>
+                                <button type="button" class="option-btn" data-value="75">الشجيرات</button>
+                                <button type="button" class="option-btn" data-value="100">الرعي</button>
                             </div>
                         </div>
                         
@@ -355,4 +355,4 @@
 
     <script src="script.js"></script>
 </body>
-                                                </html>
+                                                                     </html>
